# elkirtasse

./: .kateproject  CMakeLists.txt  README.md  elkirtasse.pro
kirtassecdrom/: CMakeLists.txt  cdromshamila.cpp  dialogcdrom.cpp  ui_dialog.h
kirtassenetwork/: CMakeLists.txt  dialognet.cpp  moc_dialognet.cpp  moc_networkplugin.cpp  networkplugin.cpp
kirtasserowat/: CMakeLists.txt  rowat.cpp
qbooks/: CMakeLists.txt
qbooks/src/: about.cpp  about.h  animation.cpp  classepub.cpp  classwizard.cpp  classwizard.h  databook.cpp  databook.h  dialog.cpp  dialog.h  dialogactions.cpp  dialogconfigbooks.cpp  dialogconfigbooks.h  dialogconvert.cpp  dialogconvert.h  dialogfavo.cpp  dialogfind.cpp  dialogfind.h  dialoggoto.cpp  dialogimportdvd.cpp  dialogmdb.cpp  dialogmdb.h  dialogoption.cpp  dialogoption.h  dialogupdat.cpp  dialogupdat.h  findbook.cpp  findbook.h  main.cpp  mainwindow.cpp  mainwindow.h  mdbexport.cpp  mdbexport.h  messages.cpp  messages.h  mw.h  print.cpp  toolrubon.cpp
qbooks/ui/translat/: kirtasse_en.ts  kirtasse_fr.ts  kirtasse_pk.ts
